Fixed overflow on several pages and mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -171,3 +171,19 @@ https://stackoverflow.com/questions/2812770/add-centered-text-to-the-middle-of-a
 /*
 end of code snippet
 */
+
+#video {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%; // 16:9 aspect ratio
+}
+
+#video > iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 1280px;
+    max-height: 720px;
+}
